add express and vercel config

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
+.env.dev
+.env.prod
 .env.development.local
 .env.test.local
 .env.production.local
@@ -55,3 +57,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+.vercel
