--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "cross-env NODE_ENV=prod nest start",
+    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=dev node dist/main",
+    "start:test": "cross-env NODE_ENV=dev jest",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -30,9 +30,11 @@
     "axios": "^1.7.7",
     "better-sqlite3": "^11.3.0",
     "cheerio": "^1.0.0",
+    "express": "^4.21.1",
     "quick.db": "^9.1.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "serverless-http": "^3.2.0",
     "typescript-telegram-bot-api": "^0.3.6"
   },
   "devDependencies": {
@@ -45,6 +47,7 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
