add name in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "dist/main.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "dist/main.js" }
-    ]
-  }
-  
+  "version": 2,
+  "name": "ti_jobs_bot",
+  "builds": [
+    {
+      "src": "dist/main.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/main.js"
+    }
+  ]
+}
