--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ NODE_ENV=dev
 BOT_TOKEN="XXXXXXXXXXXXXXXXXXXX"
 CHANNEL_ID="XXXXXXXX"
 CHANNEL_URL="XXXXXXXXXXXXXXXX"
+MONGODB_URI=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
