--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cheerio": "^1.0.0",
     "express": "^4.21.1",
     "quick.db": "^9.1.7",
+    "quickmongo": "^5.2.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "serverless-http": "^3.2.0",
