--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "ti-jobs-bot",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Telegram bot for TI Jobs in colombia",
+  "author": "Breimer Correa <breimerct@gmail.com>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "start": "node dist/main",
     "build": "nest build",
+    "start:build": "npm run build && npm start",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
     "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=dev node dist/main",
+    "start:prod": "cross-env NODE_ENV=prod node dist/main",
     "start:test": "cross-env NODE_ENV=dev jest",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test:watch": "jest --watch",
@@ -32,10 +33,8 @@
     "cheerio": "^1.0.0",
     "express": "^4.21.1",
     "quick.db": "^9.1.7",
-    "quickmongo": "^5.2.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "serverless-http": "^3.2.0",
     "typescript-telegram-bot-api": "^0.3.6"
   },
   "devDependencies": {
