--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-PORT=3000
-NODE_ENV=dev
 BOT_TOKEN="XXXXXXXXXXXXXXXXXXXX"
 CHANNEL_ID="XXXXXXXX"
 CHANNEL_URL="XXXXXXXXXXXXXXXX"
+MONGO_URI="XXXXXXXXXXXXXXXX"
 
